2008-04-10  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.c (scm_c_gtype_class_to_gtype)
	(scm_c_scm_to_gtype_instance): Avoid scm_slot_ref on 'u' slots on
	broken versions of Guile.

	* gnome/gobject/gparameter.scm (compute-get-n-set): Use our new
	%hacky-* struct accessors. (The accessors are not exported.)

	* gnome/gobject/gparameter.c (scm_sys_hacky_struct_ref)
	(scm_sys_hacky_struct_set_x): New functions, equivalent to
	struct-ref and struct-set! from guile, except that they don't
	check permissions or allocation, because we know them, and, more
	crucially, they understand how to calculate n_fields for the
	so-called "light structs". Should be unnecessary once the patches
	submitted to guile-devel on 10 April 2008 are accepted.

	Reminiscent of %get-struct-slot and %set-struct-slot! from gtype.c
	before my rewrite, which were probably written in part to
	compensate for this problem, under the haze of ignorance.

2008-04-09  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.c (%gtype-class-bind)
	(%gtype-class-inherit-magic)
	* gnome/gobject/gtype.scm (initialize on <gtype-class>): We do
	need to bind the gtype to the class before calling next-method,
	but also we have to munge the class' free function after the
	next-method. Therefore split %gtype-class-inherit-magic out of
	%gtype-class-bind. Fixes things not being freed because the base
	%inherit-magic overwrite our struct free function.

	* test-suite/gobject.test ("genum values", "gflags values"): Add
	some tests.

	* gnome/gobject/gvalue.scm: (gflags->element-list, genum->enum):
	Use the ->value functions defined in C.

	* gnome/gobject/gvalue.c (scm_c_gvalue_ref): Don't turn <genum>
	and <gflags> values into ints, leave them as gvalues.
	(genum->value, gflags->value): Implemented in C. The latter
	function is new.

	* gnome/gobject/private.h:
	* gnome/gobject/gtype.c (scm_sys_gtype_instance_construct): Export
	scm_c_gtype_instance_bind_to_object instead. Allow for the